Wfprev 459 adress the height issue, only use 100vh for the parent component, hide scrollbar for the app body (#656)

--- a/client/wfprev-war/src/main/angular/src/app/components/list-panel/projects-list/projects-list.component.scss
+++ b/client/wfprev-war/src/main/angular/src/app/components/list-panel/projects-list/projects-list.component.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   flex: 1;
   min-height: 0;
-  height: 100vh;
 }
 
 .list-header {
@@ -124,7 +123,6 @@
   }
   
   .list-contents {
-    max-height: calc(100vh - 90px);
     flex: 1;
     min-height: 0;
     overflow-y: auto;
