--- a/client/wfprev-war/src/main/angular/src/styles.scss
+++ b/client/wfprev-war/src/main/angular/src/styles.scss
@@ -89,6 +89,10 @@ body {
 
 html, body{
     font-family: var(--wf-font-family-main) !important;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 .mat-mdc-tab-body-wrapper {
